10 Stores are rendering on the page

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,8 @@
+
 <% @stores.each do |store|%>
-  <%=store.name%>
-  <%=store.city%>
-  <%=store.phone%>
-  <%=store.distance%>
-  <%=store.type%>
+  <h1><%=store.name%></h1>
+  <p><%=store.city%></p>
+  <p><%=store.phone%></p>
+  <p><%=store.distance%></p>
+  <p><%=store.type%></p>
 <%end%>
